--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/main.css"/>
-		<title>Home | Jamie Neill</title>
-	</head>
-	<body>
-		<header>
-			<nav class="navBar">
-				<table>
-					<tr>
-						<td class="navItem"><a href="index.html">Home</a></td>
-						<td class="navItem"><a href="projects.html">Projects</a></td>
-						<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
-						<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
-					</tr>
-				</table>
-			</nav>
-		</header>
-		<main>
+
+<head>
+	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<title>Home | Jamie Neill</title>
+</head>
+
+<body>
+	<header>
+		<nav class="navBar">
+			<table>
+				<tr>
+					<td class="navItem"><a href="index.html">Home</a></td>
+					<td class="navItem"><a href="projects.html">Projects</a></td>
+					<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
+					<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
+				</tr>
+			</table>
+		</nav>
+	</header>
+	<main>
 		<div class="introduction">
-		<div class="text">
-			<h2>Jamie Neill</h2>
-			<h3>BEng. (Hons.) Computer Games Development Student</h3>
+			<div class="text">
+				<h2>Jamie Neill</h2>
+				<br />
+				<h3>BEng. (Hons.) Computer Games Development Student</h3>
 			</div>
 		</div>
 		<div class="bio">
-			<h3>Who am I?</h3>
-			<p>I'm a Computer Games Development student at Ulster University, currently on my placement year at the Northern Ireland Civil Serivce</p>
-			<p>I have a demonstrated interest in VR/AR Games as well as traditional games, I have ambitions to work in Games Development at the helm of my own studio
-			<br/> 
-			as well as in the software industry and the medical industry in the use of serious games.
-			<br/> 
-			I also have given thought to teaching and have developed my own workshop-style material in C#, Arduino and basic computer classes
-			<br/> 
-			through my modules at university, and my personal projects, I have gained experience with the following technologies:</p>
+			<h3>Who am I?</h3></br>
+			<p>I'm a Computer Games Development student at Ulster University,
+				currently on my placement year at the Northern Ireland Civil Serivce I
+				have a demonstrated interest in VR/AR Games as well as traditional games,
+				 I have ambitions to work in Games Development at the helm of my own
+				studio	as well as in the software industry and the medical industry in
+				the use of serious games. I also have given thought to teaching and have
+				 developed my own workshop-style material in C#, Arduino and basic
+				 computer classes through my modules at university, and my personal
+				 projects, I have gained experience with the following technologies:</p>
 			<ul>
 				<li>Java</li>
 				<li>MIPS</li>
@@ -45,7 +49,7 @@
 				<li>SQL</li>
 				<li>ASP WebForms</li>
 				<li>Git</li>
-				<li>GitKraken<li>
+				<li>GitKraken
 			</ul>
 			<h3>Achievements</h3>
 			<ul>
@@ -54,27 +58,28 @@
 				<li>GitKraken Ambassador</li>
 			</ul>
 		</div>
-		</main>
-		<footer>
-			<nav>
-				<table class="footerNav">
-					<tr>
-						<td class="navItem"><a href="index.html">Home</a></td>
-					</tr>
-					<tr>
-						<td class="navItem"><a href="about.html">About</a></td>
-					</tr>
-					<tr>
-						<td class="navItem"><a href="projects.html">Projects</a></td>
-					</tr>
-					<tr>
-						<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
-					</tr>
-					<tr>
-						<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
-					</tr>
-				</table>
-			</nav>
-		</footer>
-	</body>
+	</main>
+	<footer>
+		<nav>
+			<table class="footerNav">
+				<tr>
+					<td class="navItem"><a href="index.html">Home</a></td>
+				</tr>
+				<tr>
+					<td class="navItem"><a href="about.html">About</a></td>
+				</tr>
+				<tr>
+					<td class="navItem"><a href="projects.html">Projects</a></td>
+				</tr>
+				<tr>
+					<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
+				</tr>
+				<tr>
+					<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
+				</tr>
+			</table>
+		</nav>
+	</footer>
+</body>
+
 </html>
