--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<nav class="navBar">
 			<table>
 				<tr>
-					<td class="navItem"><a href="index.html">Home</a></td>
+					<td class="navItem"><a href="#">Home</a></td>
 					<td class="navItem"><a href="projects.html">Projects</a></td>
 					<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
 					<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
@@ -27,14 +27,14 @@
 				<h3>BEng. (Hons.) Computer Games Development Student</h3>
 			</div>
 		</div>
-		<div class="bio">
+		<div class="bio	panel">
 			<h3>Who am I?</h3></br>
 			<p>I'm a Computer Games Development student at Ulster University,
-				currently on my placement year at the Northern Ireland Civil Serivce I
-				have a demonstrated interest in VR/AR Games as well as traditional games,
+				currently on my placement year at the Northern Ireland Civil Serivce. I
+				have an interest in VR/AR Games, as well as traditional games.
 				 I have ambitions to work in Games Development at the helm of my own
-				studio	as well as in the software industry and the medical industry in
-				the use of serious games. I also have given thought to teaching and have
+				studio, in the software industry or the medical industry in the development
+				 and use of serious games. I also have given thought to teaching and have
 				 developed my own workshop-style material in C#, Arduino and basic
 				 computer classes through my modules at university, and my personal
 				 projects, I have gained experience with the following technologies:</p>
@@ -49,7 +49,8 @@
 				<li>SQL</li>
 				<li>ASP WebForms</li>
 				<li>Git</li>
-				<li>GitKraken
+				<li>GitKraken</li>
+				<li>Direct3D 12</li>
 			</ul>
 			<h3>Achievements</h3>
 			<ul>
@@ -57,29 +58,12 @@
 				<li>Deans List</li>
 				<li>GitKraken Ambassador</li>
 			</ul>
+			</br>
+			<h3>Use the links above to view my Projects, GitHub and LinkedIn profiles.</h3>
+		</div>
+		<div class ="gap">
 		</div>
 	</main>
-	<footer>
-		<nav>
-			<table class="footerNav">
-				<tr>
-					<td class="navItem"><a href="index.html">Home</a></td>
-				</tr>
-				<tr>
-					<td class="navItem"><a href="about.html">About</a></td>
-				</tr>
-				<tr>
-					<td class="navItem"><a href="projects.html">Projects</a></td>
-				</tr>
-				<tr>
-					<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
-				</tr>
-				<tr>
-					<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
-				</tr>
-			</table>
-		</nav>
-	</footer>
 </body>
 
 </html>
