Finished projects page

--- a/projects.html
+++ b/projects.html
@@ -19,81 +19,87 @@
 			</table>
 		</nav>
 	</header>
-	
+
 	<main>
-	<div class="introduction">
+		<div class="introduction">
 			<div class="text">
 				<h2>Projects</h2>
 				<br />
 				<h3>By Jamie Neill</h3>
 			</div>
-		</div>
-		<div class="panel">
-		<h1>UNITY GAME - TAP TAVERN</h1>
-		</br>
-		<p>A university group project where the brief entailed pitching the idea for a game and then developing a prototype, the aim of this assignment is to show students
-		that overscoping is very possible and how best to be realistic, a hard truth that we learned as many of the features we thought we would implement were either too hard 
-		to do with our limitied experience or too time consuming, on top of this a member of our group injured themselves, putting us at a disadvantage in terms of hands on deck 
-		to program the game and deliver the vision. The following table shows what we planned to implement in a space of 5 weeks and what we implemented.</p>
-		</br>
-		<table>
-			<thead>
-				<tr>
-					<th>Planned</th>
-					<th>Implemented</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>4 playable characters with 4 abilities each	</td>
-					<td>&frac12; - 2 Characters with one ability each</td>
-				</tr>
-				<tr>
-					<td>Customiseable appearance for all 4 playable characters	</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Cinematics</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Store</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Ads</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Sound effects</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Music</td>
-					<td>&#10004;</td>
-				</tr>
-				<tr>
-					<td>Fair AI</td>
-					<td>&frac12; - The AI implemented seems fair but is unfair with</br> 
-					severe restrictions on their damage and attack cool down</td>
-				</tr>
-				<tr>
-					<td>Customisable weapons for all 4 characters</td>
-					<td>&#10060;</td>
-				</tr>
-				<tr>
-					<td>Tutorial Level</td>
-					<td>&#10004;</td>
-				</tr>
-			</tbody>
-		</table>
-		<h3><a href="https://github.com/neillj14/Tap-Tavern">Get the source code</a></h3>
-		<h3><a href="https://drive.google.com/file/d/1iZcHDD9zzhfaBCLt5eJo_rxqxCBLzB38/view">Get the .apk</a></h3>
+	</div>
+		<div class="panel roundTop" id="UnityGame">
+			<br/>
+			<h1 class="center">UNITY GAME - TAP TAVERN</h1>
+			</br>
+			<p>A university group project where the brief entailed pitching the idea for a game and then developing a prototype, the aim of this assignment is to show students
+				that overscoping is very possible and how best to be realistic, a hard truth that we learned as many of the features we thought we would implement were either too hard
+				to do with our limitied experience or too time consuming, on top of this a member of our group injured themselves, putting us at a disadvantage in terms of hands on deck
+				to program the game and deliver the vision. The following table shows what we planned to implement in a space of 5 weeks and what we implemented.</p>
+			</br>
+			<table>
+				<thead>
+					<tr>
+						<th>Planned</th>
+						<th>Implemented</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>4 playable characters with 4 abilities each	</td>
+						<td>&frac12; - 2 Characters with one ability each</td>
+					</tr>
+					<tr>
+						<td>Customiseable appearance for all 4 playable characters	</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Cinematics</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Store</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Ads</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Sound effects</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Music</td>
+						<td>&#10004;</td>
+					</tr>
+					<tr>
+						<td>Fair AI</td>
+						<td>&frac12; - The AI implemented seems fair but is unfair with</br>
+							severe restrictions on their damage and attack cool down</td>
+					</tr>
+					<tr>
+						<td>Customisable weapons for all 4 characters</td>
+						<td>&#10060;</td>
+					</tr>
+					<tr>
+						<td>Tutorial Level</td>
+						<td>&#10004;</td>
+					</tr>
+				</tbody>
+			</table>
+			<br/>
+			<div class="center">
+				<h3 class="link"><a href="https://github.com/neillj14/Tap-Tavern">Get the source code</a></h3>
+				<h3 class="link"><a href="https://drive.google.com/file/d/1iZcHDD9zzhfaBCLt5eJo_rxqxCBLzB38/view">Get the .apk</a></h3>
+			</div>
+			<br/>
 		</div>
 		<div class="gap">
 		</div>
-		<div class="panel">
-			<h1>C++ CALENDAR APP</h1>
+		<div class="panel" id="Calendar">
+			<br/>
+			<h1 class="center">C++ CALENDAR APP</h1>
 			</br>
 			<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted of:</p>
 			<ul>
@@ -133,18 +139,43 @@
 			</div>
 			</br>
 			<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
+			<br/>
+			<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
+			<br/>
+			<div class="center">
+				<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view the full brief here</a></h3>
+			</div>
+			</br>
 		</div>
-		<div class="panel">
+		<div class="gap">
 		</div>
-		<div class="panel">
+		<div class="panel roundBottom" id="Date">
+			</br>
+			<h1 class="center">C++ Date Class</h1>
+			<p class="text">As a university assignment I was tasked with creating a Date class within C++ that could:</p>
+			<ul class="text">
+			<li>Validate input</li>
+			<li>Be constructed in multiple ways</li>
+				<ul class="text">
+					<li>Passing nothing and creating an object with the default values of "01/01/2000</li>
+					<li>Passing of an individual day, month and year</li>
+					<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or "dd/mm/yyyy"</li>
+					<li>Passing of another Date object</li>
+				</ul>
+			<li>Increment the date correctly in all circumstances</li>
+			<li>Protect it's own data members from modification</li>
+			<li>Pass tests on Travis CI</li>
+		</ul>
+			<p class="text">The mark I received for this project was
+				<strong><u>100%</u></strong></p>
+			</br>
+			<h3 class="link center"><a href="https://neillj14.github.io/Assignment1/">
+				Get the code and view the brief here</h3>
+			</br>
 		</div>
-		<div class="panel">
-		</div>
-		<div class="panel">
-		</div>
-		<div class="panel">
+		<div class="gap">
 		</div>
 	</main>
-	
+
 	</body>
 </html>
