--- a/projects.html
+++ b/projects.html
@@ -2,22 +2,179 @@
 <html>
 
 <head>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/main.css" />
 	<title>Projects | Jamie Neill</title>
 </head>
 
 <body>
 	<header>
-		<nav class="navBar">
-			<table>
-				<tr>
-					<td class="navItem"><a href="index.html">Home</a></td>
-					<td class="navItem"><a href="#">Projects</a></td>
-					<td class="navItem"><a href="http://www.github.com/neillj14">GitHub</a></td>
-					<td class="navItem"><a href="https://www.linkedin.com/in/jamie-neill/">LinkedIn</a></td>
-				</tr>
-			</table>
+		<nav nav class="nav-extended">
+			<div class="nav-wrapper">
+				<a href="#" class="brand-logo right">Jamie Neill</a>
+				<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<ul id="nav-mobile" class="left hide-on-med-and-down">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="projects.html">Projects</a></li>
+					<li><a href="linkedin.html">LinkedIn</a></li>
+					<li><a href="http://github.com/neillj14">GitHub</a></li>
+				</ul>
+			</div>
+			<div class="nav-content">
+				<ul class="tabs tabs-transparent">
+					<li class="tab"><a href="#tapTavern">Tap Tavern</a></li>
+					<li class="tab"><a class="active" href="#calendar">Calendar</a></li>
+					<li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
+					<li class="tab"><a href="#test4">Test 4</a></li>
+				</ul>
+			</div>
 		</nav>
+		<ul class="sidenav" id="mobile-nav">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="projects.html">Projects</a></li>
+			<li><a href="linkedin.html">LinkedIn</a></li>
+			<li><a href="http://github.com/neillj14">GitHub</a></li>
+		</ul>
+		<div id="tapTavern" class="col s12">
+			<div class="panel roundTop" id="UnityGame">
+				<br />
+				<h1 class="center">UNITY GAME - TAP TAVERN</h1>
+				</br>
+				<p>A university group project where the brief entailed pitching the idea for a game and then developing
+					a
+					prototype, the aim of this assignment is to show students
+					that overscoping is very possible and how best to be realistic, a hard truth that we learned as many
+					of
+					the features we thought we would implement were either too hard
+					to do with our limitied experience or too time consuming, on top of this a member of our group
+					injured
+					themselves, putting us at a disadvantage in terms of hands on deck
+					to program the game and deliver the vision. The following table shows what we planned to implement
+					in a
+					space of 5 weeks and what we implemented.</p>
+				</br>
+				<table>
+					<thead>
+						<tr>
+							<th>Planned</th>
+							<th>Implemented</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>4 playable characters with 4 abilities each </td>
+							<td>&frac12; - 2 Characters with one ability each</td>
+						</tr>
+						<tr>
+							<td>Customiseable appearance for all 4 playable characters </td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Cinematics</td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Store</td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Ads</td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Sound effects</td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Music</td>
+							<td>&#10004;</td>
+						</tr>
+						<tr>
+							<td>Fair AI</td>
+							<td>&frac12; - The AI implemented seems fair but is unfair with</br>
+								severe restrictions on their damage and attack cool down</td>
+						</tr>
+						<tr>
+							<td>Customisable weapons for all 4 characters</td>
+							<td>&#10060;</td>
+						</tr>
+						<tr>
+							<td>Tutorial Level</td>
+							<td>&#10004;</td>
+						</tr>
+					</tbody>
+				</table>
+				<br />
+				<div class="center">
+					<h3 class="link"><a href="https://github.com/neillj14/Tap-Tavern">Get the source code</a></h3>
+					<h3 class="link"><a
+							href="https://drive.google.com/file/d/1iZcHDD9zzhfaBCLt5eJo_rxqxCBLzB38/view">Get
+							the .apk</a></h3>
+				</div>
+				<br />
+			</div>
+		</div>
+		<div id="calendar" class="col s12">
+				<div class="panel" id="Calendar">
+						<br />
+						<h1 class="center">C++ CALENDAR APP</h1>
+						</br>
+						<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted of:
+						</p>
+						<ul>
+							<li>Multiple Time objects</li>
+							<li>Multiple Event objects</li>
+							<li>Multiple Date objects</li>
+							<li>One Calendar object</li>
+						</ul>
+						<p>The calendar Object was my responsibility and required the following to be implemented:</p>
+						<br />
+						<div class="list">
+							<table>
+								<tr>
+									<td>
+										<ul>
+											<li>Add an entry object by reference</li>
+											<li>Remove an entry object by reference</li>
+											<li>Update an entry object matching a provided date and </br>
+												time with the details contained in a new entry object</li>
+											<li>Remove all entry objects from the calendar</li>
+											<li>Remove all entry objects with a date string matching a provided date</li>
+											<li>Remove all entry objects between two provided dates</li>
+										</ul>
+									</td>
+									<td>
+										<ul>
+											<li>Return the number of entries in the calendar</li>
+											<li>Return all entry objects between two dates</li>
+											<li>Return the number of entries between dates</li>
+											<li>Return the entry objects with a date matching a provided date</li>
+											<li>Return all entry objects in the calendar</li>
+											<li>Return an entry at a specified position in the calendar</li>
+										</ul>
+									</td>
+								</tr>
+							</table>
+						</div>
+						</br>
+						<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
+						<br />
+						<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
+						<br />
+						<div class="center">
+							<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view the
+									full brief here</a></h3>
+						</div>
+						</br>
+					</div>
+		</div>
+		<div id="test3" class="col s12">Test 3</div>
+		<div id="test4" class="col s12">Test 4</div>
 	</header>
 
 	<main>
@@ -27,155 +184,43 @@
 				<br />
 				<h3>By Jamie Neill</h3>
 			</div>
-	</div>
-		<div class="panel roundTop" id="UnityGame">
-			<br/>
-			<h1 class="center">UNITY GAME - TAP TAVERN</h1>
-			</br>
-			<p>A university group project where the brief entailed pitching the idea for a game and then developing a prototype, the aim of this assignment is to show students
-				that overscoping is very possible and how best to be realistic, a hard truth that we learned as many of the features we thought we would implement were either too hard
-				to do with our limitied experience or too time consuming, on top of this a member of our group injured themselves, putting us at a disadvantage in terms of hands on deck
-				to program the game and deliver the vision. The following table shows what we planned to implement in a space of 5 weeks and what we implemented.</p>
-			</br>
-			<table>
-				<thead>
-					<tr>
-						<th>Planned</th>
-						<th>Implemented</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>4 playable characters with 4 abilities each	</td>
-						<td>&frac12; - 2 Characters with one ability each</td>
-					</tr>
-					<tr>
-						<td>Customiseable appearance for all 4 playable characters	</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Cinematics</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Store</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Ads</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Sound effects</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Music</td>
-						<td>&#10004;</td>
-					</tr>
-					<tr>
-						<td>Fair AI</td>
-						<td>&frac12; - The AI implemented seems fair but is unfair with</br>
-							severe restrictions on their damage and attack cool down</td>
-					</tr>
-					<tr>
-						<td>Customisable weapons for all 4 characters</td>
-						<td>&#10060;</td>
-					</tr>
-					<tr>
-						<td>Tutorial Level</td>
-						<td>&#10004;</td>
-					</tr>
-				</tbody>
-			</table>
-			<br/>
-			<div class="center">
-				<h3 class="link"><a href="https://github.com/neillj14/Tap-Tavern">Get the source code</a></h3>
-				<h3 class="link"><a href="https://drive.google.com/file/d/1iZcHDD9zzhfaBCLt5eJo_rxqxCBLzB38/view">Get the .apk</a></h3>
-			</div>
-			<br/>
 		</div>
+
 		<div class="gap">
 		</div>
-		<div class="panel" id="Calendar">
-			<br/>
-			<h1 class="center">C++ CALENDAR APP</h1>
-			</br>
-			<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted of:</p>
-			<ul>
-				<li>Multiple Time objects</li>
-				<li>Multiple Event objects</li>
-				<li>Multiple Date objects</li>
-				<li>One Calendar object</li>
-			</ul>
-			<p>The calendar Object was my responsibility and required the following to be implemented:</p>
-			<br/>
-			<div class="list">
-			<table>
-				<tr>
-					<td>
-						<ul>
-							<li>Add an entry object by reference</li>
-							<li>Remove an entry object by reference</li>
-							<li>Update an entry object matching a provided date and </br>
-							time with the details contained in a new entry object</li>
-							<li>Remove all entry objects from the calendar</li>
-							<li>Remove all entry objects with a date string matching a provided date</li>
-							<li>Remove all entry objects between two provided dates</li>
-						</ul>
-					</td>
-					<td>
-						<ul>
-							<li>Return the number of entries in the calendar</li>
-							<li>Return all entry objects between two dates</li>
-							<li>Return the number of entries between dates</li>
-							<li>Return the entry objects with a date matching a provided date</li>
-							<li>Return all entry objects in the calendar</li>
-							<li>Return an entry at a specified position in the calendar</li>
-						</ul>
-					</td>
-				</tr>
-			</table>
-			</div>
-			</br>
-			<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
-			<br/>
-			<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
-			<br/>
-			<div class="center">
-				<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view the full brief here</a></h3>
-			</div>
-			</br>
-		</div>
+		
 		<div class="gap">
 		</div>
 		<div class="panel roundBottom" id="Date">
 			</br>
 			<h1 class="center">C++ Date Class</h1>
-			<p class="text">As a university assignment I was tasked with creating a Date class within C++ that could:</p>
+			<p class="text">As a university assignment I was tasked with creating a Date class within C++ that could:
+			</p>
 			<ul class="text">
-			<li>Validate input</li>
-			<li>Be constructed in multiple ways</li>
+				<li>Validate input</li>
+				<li>Be constructed in multiple ways</li>
 				<ul class="text">
 					<li>Passing nothing and creating an object with the default values of "01/01/2000</li>
 					<li>Passing of an individual day, month and year</li>
-					<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or "dd/mm/yyyy"</li>
+					<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or
+						"dd/mm/yyyy"</li>
 					<li>Passing of another Date object</li>
 				</ul>
-			<li>Increment the date correctly in all circumstances</li>
-			<li>Protect it's own data members from modification</li>
-			<li>Pass tests on Travis CI</li>
-		</ul>
+				<li>Increment the date correctly in all circumstances</li>
+				<li>Protect it's own data members from modification</li>
+				<li>Pass tests on Travis CI</li>
+			</ul>
 			<p class="text">The mark I received for this project was
 				<strong><u>100%</u></strong></p>
 			</br>
 			<h3 class="link center"><a href="https://neillj14.github.io/Assignment1/">
-				Get the code and view the brief here</h3>
+					Get the code and view the brief here</h3>
 			</br>
 		</div>
 		<div class="gap">
 		</div>
 	</main>
 
-	</body>
+</body>
+
 </html>
