--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 				<a href="#" class="brand-logo right">Jamie Neill</a>
 				<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li><a href="index.html">Home</a></li>
+					<li class="active"><a href="#">Home</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="linkedin.html">LinkedIn</a></li>
 					<li><a href="http://github.com/neillj14">GitHub</a></li>
+					<li><a href="cv.html">CV</a></li>
 				</ul>
 			</div>
 		</nav>
 		<ul class="sidenav" id="mobile-nav">
-			<li><a href="index.html">Home</a></li>
+			<li class="active"><a href="#">Home</a></li>
 			<li><a href="projects.html">Projects</a></li>
 			<li><a href="linkedin.html">LinkedIn</a></li>
 			<li><a href="http://github.com/neillj14">GitHub</a></li>
+			<li><a href="cv.html">CV</a></li>
 		</ul>
 	</header>
 	<main>
