--- a/projects.html
+++ b/projects.html
@@ -14,33 +14,40 @@
 
 <body>
 	<header>
-		<nav nav class="nav-extended">
-			<div class="nav-wrapper">
-				<a href="#" class="brand-logo right">Jamie Neill</a>
-				<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="linkedin.html">LinkedIn</a></li>
-					<li><a href="http://github.com/neillj14">GitHub</a></li>
-				</ul>
-			</div>
-			<div class="nav-content">
-				<ul class="tabs tabs-transparent">
-					<li class="tab"><a href="#tapTavern">Tap Tavern</a></li>
-					<li class="tab"><a class="active" href="#calendar">Calendar</a></li>
-					<li class="tab disabled"><a href="#test3">Disabled Tab</a></li>
-					<li class="tab"><a href="#test4">Test 4</a></li>
-				</ul>
-			</div>
-		</nav>
+		<div class="navbar-fixed">
+			<nav nav class="nav-extended">
+				<div class="nav-wrapper">
+					<a href="#" class="brand-logo right">Jamie Neill</a>
+					<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+					<ul id="nav-mobile" class="left hide-on-med-and-down">
+						<li><a href="index.html">Home</a></li>
+						<li class="active"><a href="#">Projects</a></li>
+						<li><a href="linkedin.html">LinkedIn</a></li>
+						<li><a href="http://github.com/neillj14">GitHub</a></li>
+						<li><a href="cv.html">CV</a></li>
+					</ul>
+				</div>
+				<div class="nav-content">
+					<ul class="tabs tabs-transparent">
+						<li class="tab"><a class="active" href="#tapTavern">Tap Tavern</a></li>
+						<li class="tab"><a href="#calendar">Calendar Class</a></li>
+						<li class="tab"><a href="#date">Date Class</a></li>
+						<li class="tab"><a href="#imhappy">IM HAPPY Website</a></li>
+						<li class="tab"><a href="#ner">Electronics Repair Site</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<main>
 		<ul class="sidenav" id="mobile-nav">
 			<li><a href="index.html">Home</a></li>
-			<li><a href="projects.html">Projects</a></li>
+			<li><a href="#">Projects</a></li>
 			<li><a href="linkedin.html">LinkedIn</a></li>
 			<li><a href="http://github.com/neillj14">GitHub</a></li>
+			<li><a href="cv.html">CV</a></li>
 		</ul>
-		<div id="tapTavern" class="col s12">
+		<div id="tapTavern" class="container col s12">
 			<div class="panel roundTop" id="UnityGame">
 				<br />
 				<h1 class="center">UNITY GAME - TAP TAVERN</h1>
@@ -119,108 +126,118 @@
 				<br />
 			</div>
 		</div>
-		<div id="calendar" class="col s12">
-				<div class="panel" id="Calendar">
-						<br />
-						<h1 class="center">C++ CALENDAR APP</h1>
-						</br>
-						<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted of:
-						</p>
-						<ul>
-							<li>Multiple Time objects</li>
-							<li>Multiple Event objects</li>
-							<li>Multiple Date objects</li>
-							<li>One Calendar object</li>
-						</ul>
-						<p>The calendar Object was my responsibility and required the following to be implemented:</p>
-						<br />
-						<div class="list">
-							<table>
-								<tr>
-									<td>
-										<ul>
-											<li>Add an entry object by reference</li>
-											<li>Remove an entry object by reference</li>
-											<li>Update an entry object matching a provided date and </br>
-												time with the details contained in a new entry object</li>
-											<li>Remove all entry objects from the calendar</li>
-											<li>Remove all entry objects with a date string matching a provided date</li>
-											<li>Remove all entry objects between two provided dates</li>
-										</ul>
-									</td>
-									<td>
-										<ul>
-											<li>Return the number of entries in the calendar</li>
-											<li>Return all entry objects between two dates</li>
-											<li>Return the number of entries between dates</li>
-											<li>Return the entry objects with a date matching a provided date</li>
-											<li>Return all entry objects in the calendar</li>
-											<li>Return an entry at a specified position in the calendar</li>
-										</ul>
-									</td>
-								</tr>
-							</table>
-						</div>
-						</br>
-						<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
-						<br />
-						<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
-						<br />
-						<div class="center">
-							<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view the
-									full brief here</a></h3>
-						</div>
-						</br>
-					</div>
-		</div>
-		<div id="test3" class="col s12">Test 3</div>
-		<div id="test4" class="col s12">Test 4</div>
-	</header>
-
-	<main>
-		<div class="introduction">
-			<div class="text">
-				<h2>Projects</h2>
+		<div id="calendar" class="container col s12">
+			<div class="panel" id="Calendar">
 				<br />
-				<h3>By Jamie Neill</h3>
+				<h1 class="center">C++ CALENDAR APP</h1>
+				</br>
+				<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted
+					of:
+				</p>
+				<ul>
+					<li>Multiple Time objects</li>
+					<li>Multiple Event objects</li>
+					<li>Multiple Date objects</li>
+					<li>One Calendar object</li>
+				</ul>
+				<p>The calendar Object was my responsibility and required the following to be implemented:</p>
+				<br />
+				<div class="list">
+					<table>
+						<tr>
+							<td>
+								<ul>
+									<li>Add an entry object by reference</li>
+									<li>Remove an entry object by reference</li>
+									<li>Update an entry object matching a provided date and </br>
+										time with the details contained in a new entry object</li>
+									<li>Remove all entry objects from the calendar</li>
+									<li>Remove all entry objects with a date string matching a provided date</li>
+									<li>Remove all entry objects between two provided dates</li>
+								</ul>
+							</td>
+							<td>
+								<ul>
+									<li>Return the number of entries in the calendar</li>
+									<li>Return all entry objects between two dates</li>
+									<li>Return the number of entries between dates</li>
+									<li>Return the entry objects with a date matching a provided date</li>
+									<li>Return all entry objects in the calendar</li>
+									<li>Return an entry at a specified position in the calendar</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
+				</div>
+				</br>
+				<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
+				<br />
+				<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
+				<br />
+				<div class="center">
+					<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view
+							the
+							full brief here</a></h3>
+				</div>
+				</br>
 			</div>
 		</div>
-
-		<div class="gap">
-		</div>
-		
-		<div class="gap">
-		</div>
-		<div class="panel roundBottom" id="Date">
-			</br>
-			<h1 class="center">C++ Date Class</h1>
-			<p class="text">As a university assignment I was tasked with creating a Date class within C++ that could:
-			</p>
-			<ul class="text">
-				<li>Validate input</li>
-				<li>Be constructed in multiple ways</li>
+		<div id="date" class="container col s12">
+			<div class="panel roundBottom" id="Date">
+				</br>
+				<h1 class="center">C++ Date Class</h1>
+				<p class="text">As a university assignment I was tasked with creating a Date class within C++ that
+					could:
+				</p>
 				<ul class="text">
-					<li>Passing nothing and creating an object with the default values of "01/01/2000</li>
-					<li>Passing of an individual day, month and year</li>
-					<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or
-						"dd/mm/yyyy"</li>
-					<li>Passing of another Date object</li>
+					<li>Validate input</li>
+					<li>Be constructed in multiple ways</li>
+					<ul class="text">
+						<li>Passing nothing and creating an object with the default values of "01/01/2000</li>
+						<li>Passing of an individual day, month and year</li>
+						<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or
+							"dd/mm/yyyy"</li>
+						<li>Passing of another Date object</li>
+					</ul>
+					<li>Increment the date correctly in all circumstances</li>
+					<li>Protect it's own data members from modification</li>
+					<li>Pass tests on Travis CI</li>
 				</ul>
-				<li>Increment the date correctly in all circumstances</li>
-				<li>Protect it's own data members from modification</li>
-				<li>Pass tests on Travis CI</li>
-			</ul>
-			<p class="text">The mark I received for this project was
-				<strong><u>100%</u></strong></p>
-			</br>
-			<h3 class="link center"><a href="https://neillj14.github.io/Assignment1/">
-					Get the code and view the brief here</h3>
-			</br>
+				<p class="text">The mark I received for this project was
+					<strong><u>100%</u></strong></p>
+				</br>
+				<h3 class="link center"><a href="https://neillj14.github.io/Assignment1/">
+						Get the code and view the brief here</h3>
+				</br>
+			</div>
 		</div>
-		<div class="gap">
+		<div id="imhappy" class="col s12">
+			<iframe style="position: fixed;
+			top:115px;
+			bottom: 0px;
+			right: 0px;
+			width: 100%;
+			border: none;
+			margin: 0;
+			padding: 0;
+			z-index: 999999;
+			height: 100%;" src="http://neillj14.github.io/IMHAPPY/index.html" width="100%"></iframe>
+		</div>
+		<div id="ner" class="col s12">
+			<iframe style="position: fixed;
+			top:115px;
+			bottom: 0px;
+			right: 0px;
+			width: 100%;
+			border: none;
+			margin: 0;
+			padding: 0;
+			z-index: 999999;
+			height: 100%;" src="http://neillselectronicrepairs.azurewebsites.net/"></iframe>
 		</div>
 	</main>
-
+	<script src="js/main.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 
 </html>
