Updated link to bensab dl

--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 				<p><strong>Benevolent Sabotage does not store or track any personally identifying information about you or your machine</strong></p>
 				<br />
 				<div class="center">
-					<h3>Download <a href="/downloads/benevolentsabotageinstall.exe">Here</a>(166MB)</h3>
+					<h3>Download <a href="https://drive.google.com/file/d/1FWo8i3yCjyvi8NOiFVNXx8hqCfwfa5ND/view?usp=sharing">Here</a>(166MB)</h3>
 				</div>
 				<br />
 			</div>
