--- a/projects.html
+++ b/projects.html
@@ -29,12 +29,12 @@
 				</div>
 				<div class="nav-content">
 					<ul class="tabs tabs-transparent">
+						<li class="tab"><a href="#friendsOfRescue">Friends of Rescue</a></li>
 						<li class="tab"><a class="active" href="#benevolentSabotage">Benevolent Sabotage</a></li>
 						<li class="tab"><a href="#tapTavern">Tap Tavern</a></li>
 						<li class="tab"><a href="#calendar">Calendar Class</a></li>
 						<li class="tab"><a href="#date">Date Class</a></li>
 						<li class="tab"><a href="#imhappy">IM HAPPY Website</a></li>
-						<li class="tab"><a href="#ner">Electronics Repair Site</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -48,6 +48,33 @@
 			<li><a href="http://github.com/neillj14">GitHub</a></li>
 			<li><a href="cv.html">CV</a></li>
 		</ul>
+		<div id="friendsOfRescue" class="container col s12">
+			<div class="panel roundTop" id="WebSite">
+				<br />
+				<h1 class="center">WEBSITE - Friends of Rescue</h1>
+				</br>
+				<h2>About</h2>
+				<p>Friends of rescue is a Derry/Londonderry based animal charity focused on providing loving homes to animals across Northern Ireland</p>
+				<p>The site features the following</p>
+				<ul>
+					<li>Blog</li>
+					<li>Responsive Design</li>
+					<li>Contact Form</li>
+				</ul>
+			<p>And was built with the following</p>
+			<ul>
+				<li>Netlify CMS</li>
+				<li>GatsbyJS</li>
+				<li>Trello</li>
+				<li>GitHub</li>
+			</ul>
+				<br />
+				<div class="center">
+					<h3>Visit tech demo <a href="https://friendsofrescueni.netlify.app/">Here</a></h3>
+				</div>
+				<br />
+			</div>
+		</div>
 		<div id="benevolentSabotage" class="container col s12">
 			<div class="panel roundTop" id="UnityGame">
 				<br />
