--- a/projects.html
+++ b/projects.html
@@ -12,12 +12,12 @@
 	<title>Projects | Jamie Neill</title>
 </head>
 
-<body>
+<body class="flow-text">
 	<header>
 		<div class="navbar-fixed">
 			<nav nav class="nav-extended">
-				<div class="nav-wrapper">
-					<a href="#" class="brand-logo right">Jamie Neill</a>
+				<div class="nav-wrapper container">
+					<a href="#" class="brand-logo center">Jamie Neill</a>
 					<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 					<ul id="nav-mobile" class="left hide-on-med-and-down">
 						<li><a href="index.html">Home</a></li>
@@ -27,269 +27,117 @@
 						<li><a href="cv.html">CV</a></li>
 					</ul>
 				</div>
-				<div class="nav-content">
-					<ul class="tabs tabs-transparent">
-						<li class="tab"><a href="#friendsOfRescue">Friends of Rescue</a></li>
-						<li class="tab"><a class="active" href="#benevolentSabotage">Benevolent Sabotage</a></li>
-						<li class="tab"><a href="#tapTavern">Tap Tavern</a></li>
-						<li class="tab"><a href="#calendar">Calendar Class</a></li>
-						<li class="tab"><a href="#date">Date Class</a></li>
-						<li class="tab"><a href="#imhappy">IM HAPPY Website</a></li>
-					</ul>
-				</div>
 			</nav>
-		</div>
+			<ul class="sidenav" id="mobile-nav">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="projects.html">Projects</a></li>
+				<li><a href="linkedin.html">LinkedIn</a></li>
+				<li><a href="http://github.com/neillj14">GitHub</a></li>
+				<li><a href="cv.html">CV</a></li>
+			</ul>
 	</header>
 	<main>
-		<ul class="sidenav" id="mobile-nav">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="linkedin.html">LinkedIn</a></li>
-			<li><a href="http://github.com/neillj14">GitHub</a></li>
-			<li><a href="cv.html">CV</a></li>
-		</ul>
-		<div id="friendsOfRescue" class="container col s12">
-			<div class="panel roundTop" id="WebSite">
-				<br />
-				<h1 class="center">WEBSITE - Friends of Rescue</h1>
-				</br>
-				<h2>About</h2>
-				<p>Friends of rescue is a Derry/Londonderry based animal charity focused on providing loving homes to animals across Northern Ireland</p>
-				<p>The site features the following</p>
-				<ul>
-					<li>Blog</li>
-					<li>Responsive Design</li>
-					<li>Contact Form</li>
-				</ul>
-			<p>And was built with the following</p>
-			<ul>
-				<li>Netlify CMS</li>
-				<li>GatsbyJS</li>
-				<li>Trello</li>
-				<li>GitHub</li>
+		<div class="container">
+			<div class="center">
+				<h1>Projects</h1>
+				<p>Below you can find a list of all my projects to date, categorised by type.</p>
+			</div>
+			<h3>Video Games</h3>
+			<ul class="collapsible">
+				<li>
+					<div class="collapsible-header">Virtual Exercise</div>
+					<div class="collapsible-body">
+						<div class="center"><video loop autoplay muted>
+								<source src="./images/gamedemo.mp4" type="video/mp4">
+							</video></div>
+						<table>
+							<thead>
+								<tr>
+									<th class="center">Engine</th>
+									<th class="center">Description</th>
+									<th class="center">Audience</th>
+									<th class="center">Platforms</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Unity</td>
+									<td class="justify">A VR based game with a focus on reporting the performance the
+										player outputs for a
+										list of individual exercises with the goal of helping gauge recovery.</td>
+									<td class="center">16+</td>
+									<td class="center">PCVR, Quest 2</td>
+								</tr>
+							</tbody>
+						</table>
+						<h5 class="center">This project was my final year project, read the paper <a
+								href="https://www.researchgate.net/publication/351854394_EEE521_Final_Year_Project_-_Exploring_the_potential_of_Virtual_Reality_in_the_Delivery_of_Personalised_Exercise"
+								target="_blank">here</a>(opens in new tab)</h5>
+						<h5 class="center">Download the game <a
+								href="https://drive.google.com/file/d/1Lji2IqKD6VaUjtpdPUL2cK0ptneBulPX/view?usp=sharing">here</a>(22MB)
+					</div>
+				</li>
+				<li>
+					<div class="collapsible-header">Benevolent Sabotage</div>
+					<div class="collapsible-body">
+						<div class="center"><video width="50%" loop autoplay muted>
+								<source src="./images/game2demo.mp4" type="video/mp4">
+							</video></div>
+						<table>
+							<thead>
+								<tr>
+									<th class="center">Engine</th>
+									<th class="center">Description</th>
+									<th class="center">Audience</th>
+									<th class="center">Platforms</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Unity</td>
+									<td>A thrid-person action game set in a dystopian future where robots deduce the
+										most
+										efficent way to help humanity is to end it. Playing as the outmoded KL-17, save
+										your
+										humanity from exinction to continue your prime directive</td>
+									<td>16+</td>
+									<td>PC</td>
+								</tr>
+							</tbody>
+						</table>
+						<h5 class="center">Download the tech demo <a
+								href="https://drive.google.com/file/d/1rgrcliTRvq4uLbsQBFvB__kjkKhgC7Fk/view?usp=sharing">here</a>(162MB)
+					</div>
+				</li>
 			</ul>
-				<br />
-				<div class="center">
-					<h3>Visit tech demo <a href="https://friendsofrescueni.netlify.app/">Here</a></h3>
-				</div>
-				<br />
-			</div>
-		</div>
-		<div id="benevolentSabotage" class="container col s12">
-			<div class="panel roundTop" id="UnityGame">
-				<br />
-				<h1 class="center">UNITY GAME - BENEVOLENT SABOTAGE</h1>
-				</br>
-				<h2>About</h2>
-				<p>Benevolent Sabotage was produced as a university assignment to introduce the concepts of analytics and their uses in games</p>
-				<p>The game tracks and reports the following data</p>
-				<ul>
-					<li>Level segment completion
+			<h3>Websites</h3>
+			<ul class="collapsible">
+				<li>
+					<div class="collapsible-header">Friends of Rescue</div>
+					<div class="collapsible-body">
+						<p>A website for Derry~Londonderry based animal charity, friends of rescue to allow visitors to
+						</p>
 						<ul>
-							<li>Times completed</li>
-							<li>Time taken to complete</li>
+							<li>Read Blog Posts</li>
+							<li>Get in Contact</li>
+							<li>Learn About the Charity</li>
+							<li>Donate to the Charity via Paypal</li>
 						</ul>
-					</li>
-					<li>Daily Active Users</li>
-					<li>Monthly Active Users</li>
-					<li>Level Starts</li>
-					<li>Sessions</li>
-				</ul>
-				<p><strong>Benevolent Sabotage does not store or track any personally identifying information about you or your machine</strong></p>
-				<br />
-				<div class="center">
-					<h3>Download <a href="https://drive.google.com/file/d/1FWo8i3yCjyvi8NOiFVNXx8hqCfwfa5ND/view?usp=sharing">Here</a>(166MB)</h3>
-				</div>
-				<br />
-			</div>
-		</div>
-		<div id="tapTavern" class="container col s12">
-			<div class="panel roundTop" id="UnityGame">
-				<br />
-				<h1 class="center">UNITY GAME - TAP TAVERN</h1>
-				</br>
-				<p>A university group project where the brief entailed pitching the idea for a game and then developing
-					a
-					prototype, the aim of this assignment is to show students
-					that overscoping is very possible and how best to be realistic, a hard truth that we learned as many
-					of
-					the features we thought we would implement were either too hard
-					to do with our limitied experience or too time consuming, on top of this a member of our group
-					injured
-					themselves, putting us at a disadvantage in terms of hands on deck
-					to program the game and deliver the vision. The following table shows what we planned to implement
-					in a
-					space of 5 weeks and what we implemented.</p>
-				</br>
-				<table>
-					<thead>
-						<tr>
-							<th>Planned</th>
-							<th>Implemented</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>4 playable characters with 4 abilities each </td>
-							<td>&frac12; - 2 Characters with one ability each</td>
-						</tr>
-						<tr>
-							<td>Customiseable appearance for all 4 playable characters </td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Cinematics</td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Store</td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Ads</td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Sound effects</td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Music</td>
-							<td>&#10004;</td>
-						</tr>
-						<tr>
-							<td>Fair AI</td>
-							<td>&frac12; - The AI implemented seems fair but is unfair with</br>
-								severe restrictions on their damage and attack cool down</td>
-						</tr>
-						<tr>
-							<td>Customisable weapons for all 4 characters</td>
-							<td>&#10060;</td>
-						</tr>
-						<tr>
-							<td>Tutorial Level</td>
-							<td>&#10004;</td>
-						</tr>
-					</tbody>
-				</table>
-				<br />
-				<div class="center">
-					<h3 class="link"><a href="https://github.com/neillj14/Tap-Tavern">Get the source code</a></h3>
-					<h3 class="link"><a
-							href="https://drive.google.com/file/d/1iZcHDD9zzhfaBCLt5eJo_rxqxCBLzB38/view">Get
-							the .apk</a></h3>
-				</div>
-				<br />
-			</div>
-		</div>
-		<div id="calendar" class="container col s12">
-			<div class="panel" id="Calendar">
-				<br />
-				<h1 class="center">C++ CALENDAR APP</h1>
-				</br>
-				<p>A Group University Project where the group was tasked with writing a C++ calendar app that consisted
-					of:
-				</p>
-				<ul>
-					<li>Multiple Time objects</li>
-					<li>Multiple Event objects</li>
-					<li>Multiple Date objects</li>
-					<li>One Calendar object</li>
-				</ul>
-				<p>The calendar Object was my responsibility and required the following to be implemented:</p>
-				<br />
-				<div class="list">
-					<table>
-						<tr>
-							<td>
-								<ul>
-									<li>Add an entry object by reference</li>
-									<li>Remove an entry object by reference</li>
-									<li>Update an entry object matching a provided date and </br>
-										time with the details contained in a new entry object</li>
-									<li>Remove all entry objects from the calendar</li>
-									<li>Remove all entry objects with a date string matching a provided date</li>
-									<li>Remove all entry objects between two provided dates</li>
-								</ul>
-							</td>
-							<td>
-								<ul>
-									<li>Return the number of entries in the calendar</li>
-									<li>Return all entry objects between two dates</li>
-									<li>Return the number of entries between dates</li>
-									<li>Return the entry objects with a date matching a provided date</li>
-									<li>Return all entry objects in the calendar</li>
-									<li>Return an entry at a specified position in the calendar</li>
-								</ul>
-							</td>
-						</tr>
-					</table>
-				</div>
-				</br>
-				<p>I also implemented operator overloads and helper functions to enable more efficient operations</p>
-				<br />
-				<p class="text">The mark I received for this project was <strong><u>100%</u></strong></p>
-				<br />
-				<div class="center">
-					<h3 class="link"><a href="https://github.com/neillj14/C-Console-Calendar-App">Get the code and view
-							the
-							full brief here</a></h3>
-				</div>
-				</br>
-			</div>
-		</div>
-		<div id="date" class="container col s12">
-			<div class="panel roundBottom" id="Date">
-				</br>
-				<h1 class="center">C++ Date Class</h1>
-				<p class="text">As a university assignment I was tasked with creating a Date class within C++ that
-					could:
-				</p>
-				<ul class="text">
-					<li>Validate input</li>
-					<li>Be constructed in multiple ways</li>
-					<ul class="text">
-						<li>Passing nothing and creating an object with the default values of "01/01/2000</li>
-						<li>Passing of an individual day, month and year</li>
-						<li>Passing of a string that was either of the format "d/m/yyyy", "d/mm/yyyy", "dd/m/yyyy" or
-							"dd/mm/yyyy"</li>
-						<li>Passing of another Date object</li>
-					</ul>
-					<li>Increment the date correctly in all circumstances</li>
-					<li>Protect it's own data members from modification</li>
-					<li>Pass tests on Travis CI</li>
-				</ul>
-				<p class="text">The mark I received for this project was
-					<strong><u>100%</u></strong></p>
-				</br>
-				<h3 class="link center"><a href="https://neillj14.github.io/Assignment1/">
-						Get the code and view the brief here</h3>
-				</br>
-			</div>
-		</div>
-		<div id="imhappy" class="col s12">
-			<iframe style="position: fixed;
-			top:115px;
-			bottom: 0px;
-			right: 0px;
-			width: 100%;
-			border: none;
-			margin: 0;
-			padding: 0;
-			z-index: 999999;
-			height: 100%;" src="http://neillj14.github.io/IMHAPPY/index.html" width="100%"></iframe>
-		</div>
-		<div id="ner" class="col s12">
-			<iframe style="position: fixed;
-			top:115px;
-			bottom: 0px;
-			right: 0px;
-			width: 100%;
-			border: none;
-			margin: 0;
-			padding: 0;
-			z-index: 999999;
-			height: 100%;" src="http://neillselectronicrepairs.azurewebsites.net/"></iframe>
+						<br>
+						<h4>Visit the site <a href="https://www.friendsofrescueni.com">here</a></h4>
+					</div>
+				</li>
+				<li>
+					<div class="collapsible-header">IM HAPPY</div>
+					<div class="collapsible-body">The IM HAPPY project was an initiative to <b>IM</b>prove <b>H</b>opes,
+						<b>A</b>spirations,
+						<b>P</b>rospects & <b>P</b>otential for <b>Y</b>outh in the Coleraine area, before the project
+						was decomissioned, I
+						was working on a website for them, as seen <a
+							href="https://neillj14.github.io/IMHAPPY/index.html" target="_blank">here</a>
+					</div>
+				</li>
+			</ul>
 		</div>
 	</main>
 	<script src="js/main.js"></script>
