--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="linkedin.html">LinkedIn</a></li>
 					<li><a href="http://github.com/neillj14">GitHub</a></li>
-					<li><a href="cv.html">CV</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -39,7 +38,8 @@
 		<div class="container flow-text">
 			<div class="center">
 				<h2>Jamie Neill</h2>
-				<h3>BEng. (Hons.) Computer Games Development Student</h3>
+				<h3>TDP Engineer at Optum</h3>
+				<h5>BEng. Hons. Computer Games Development Graduate</h5>
 			</div>
 			<hr>
 			<div>
@@ -47,12 +47,7 @@
 					<img class="col s3 responsive-img circle" src="./images/profile.jpg" />
 					<div class="col s9">
 						<h3 class="center">Who am I?</h3>
-						<p class="justify">I'm a Computer Games Development student at Ulster University. I have just
-							completed my final year where my final project was a
-							Virtual Reality exercise game. I will be starting a position with UnitedHealth Group's Optum
-							in
-							Spetember 2021.
-							In my free time I like to livestream to Twitch and make video games.</p>
+						<p class="justify">I'm currently a TDP Engineer at Optum, part of the UnitedHealth Group.</p>
 					</div>
 				</div>
 			</div>
