--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
 					<img class="col s3 responsive-img circle" src="./images/profile.jpg" />
 					<div class="col s9">
 						<h3 class="center">Who am I?</h3>
-						<p class="justify">I'm currently a TDP Engineer at Optum, part of the UnitedHealth Group.</p>
+						<p class="justify">I'm currently a TDP Engineer at Optum, part of the UnitedHealth Group. During my time at university I studied
+						computer games development with the Unity game engine where my final year project was a Virtual Reality game with the aim to
+						promote exercising in a gamified way that reported user progress to a dashboard running on the ASP.NET MVC framework. Current
+						interest lies in VR development and story driven development.</p>
 					</div>
 				</div>
 			</div>
