--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<div class="container flow-text">
 			<div class="center">
 				<h2>Jamie Neill</h2>
-				<h3>TDP Engineer at Optum</h3>
+				<h3>Software Engineer at Optum</h3>
 				<h5>BEng. Hons. Computer Games Development Graduate</h5>
 			</div>
 			<hr>
@@ -46,7 +46,7 @@
 					<img class="col s3 responsive-img circle" src="./images/profile.jpg" />
 					<div class="col s9">
 						<h3 class="center">Who am I?</h3>
-						<p class="justify">I'm currently a TDP Engineer at Optum, part of the UnitedHealth Group. During my time at university I studied
+						<p class="justify">I'm currently a Software Engineer at Optum, part of UnitedHealth Group. During my time at university I studied
 						computer games development with the Unity game engine where my final year project was a Virtual Reality game with the aim to
 						promote exercising in a gamified way that reported user progress to a dashboard running on the ASP.NET MVC framework. Current
 						interest lies in VR development and story driven development.</p>
