--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
 <body>
 	<header>
-		<nav class="flow-text">
-			<div class="nav-wrapper">
-				<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-				<ul id="nav-mobile" class="left hide-on-med-and-down">
-					<li class="active"><a href="#">Home</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="linkedin.html">LinkedIn</a></li>
-					<li><a href="http://github.com/neillj14">GitHub</a></li>
-				</ul>
-			</div>
-		</nav>
+		<div class="navbar-fixed">
+			<nav nav class="nav-extended">
+				<div class="nav-wrapper container">
+					<a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+					<ul id="nav-mobile" class="left hide-on-med-and-down">
+						<li class="active"><a href="#">Home</a></li>
+						<li><a href="projects.html">Projects</a></li>
+						<li><a href="linkedin.html">LinkedIn</a></li>
+						<li><a href="http://github.com/neillj14">GitHub</a></li>
+					</ul>
+				</div>
+			</nav>
+		</div>
 		<ul class="sidenav center" id="mobile-nav">
 			<li class="active"><a href="#">Home</a></li>
 			<li><a href="projects.html">Projects</a></li>
