--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
 		<div class="container">
 			<div class="center">
 				<h1>Projects</h1>
-				<p>Below you can find a list of all my projects to date, categorised by type.</p>
+				<p>Below you can find a list of some of my projects to date, categorised by type.</p>
 			</div>
 			<h3>Video Games</h3>
 			<ul class="collapsible">
@@ -125,16 +125,6 @@
 						</ul>
 						<br>
 						<h4>Visit the site <a href="https://www.friendsofrescueni.com">here</a></h4>
-					</div>
-				</li>
-				<li>
-					<div class="collapsible-header">IM HAPPY</div>
-					<div class="collapsible-body">The IM HAPPY project was an initiative to <b>IM</b>prove <b>H</b>opes,
-						<b>A</b>spirations,
-						<b>P</b>rospects & <b>P</b>otential for <b>Y</b>outh in the Coleraine area, before the project
-						was decomissioned, I
-						was working on a website for them, as seen <a
-							href="https://neillj14.github.io/IMHAPPY/index.html" target="_blank">here</a>
 					</div>
 				</li>
 			</ul>
